--- a/mk/index.html
+++ b/mk/index.html
@@ -111,7 +111,7 @@
                         "name": "Lekov Security",
                         "url": "https://lekovsecurity.mk/",
                         "logo": "https://lekovsecurity.mk/assets/images/logo.png",
-                        "description": "Lekov Security нуди експертско пенетрациско тестирање на веб апликации и безбеден развој на софтвер. Обезбедуваме едноставни, моќни решенија за заштита на вашиот бизнис.",
+                        "description": "Lekov Security нуди експертско пенетрациско тестирање на веб апликации и развој на безбеден софтвер. Обезбедуваме едноставни, моќни решенија за заштита на вашиот бизнис.",
                         "contactPoint": {
                             "@type": "ContactPoint",
                             "telephone": "+389-74-221-337",
@@ -171,12 +171,12 @@
                     },
                     {
                         "@type": "Service",
-                        "serviceType": "Безбеден Развој на Софтвер",
+                        "serviceType": "Развој на Безбеден Софтвер",
                         "provider": {
                             "@type": "Organization",
                             "name": "Lekov Security"
                         },
-                        "name": "Безбеден Развој на Софтвер",
+                        "name": "Развој на Безбеден Софтвер",
                         "description": "Изработуваме софтвер по нарачка прилагоден на вашите деловни процеси. Нашиот развоен циклус интегрира безбедност од самиот почеток, создавајќи сигурни и скалабилни решенија кои се безбедни по дизајн.",
                         "hasOfferCatalog": {
                             "@type": "OfferCatalog",
@@ -352,7 +352,7 @@
 
                         <div class="bg-cyber-secondary/80 border border-cyber-accent/30 p-8 reveal flex flex-col h-full" style="transition-delay: 200ms;">
                             <div class="flex-grow">
-                                <h3 class="font-display text-2xl font-bold text-cyber-accent mb-4">Безбеден Развој на Софтвер</h3>
+                                <h3 class="font-display text-2xl font-bold text-cyber-accent mb-4">Развој на Безбеден Софтвер</h3>
                                 <p class="text-cyber-light/80 mb-6">Изработуваме софтвер по нарачка прилагоден на вашите деловни процеси. Нашиот развоен циклус интегрира безбедност од самиот почеток, создавајќи сигурни и скалабилни решенија кои се безбедни по дизајн.</p>
                                 <ul class="font-mono text-sm space-y-3">
                                     <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Развоен процес со безбедноста на прво место</li>
@@ -435,7 +435,7 @@
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-cyber-light/50">
                 <p class="font-mono text-sm">&copy; 2025 Lekov Security. Сите права се задржани.</p>
                 <p class="font-mono text-sm mt-1">Кратово, Северна Македонија</p>
-                <p class="font-mono text-xs mt-2">Вашиот Партнер за Сајбер Безбедност и Безбеден Развој на Софтвер.</p>
+                <p class="font-mono text-xs mt-2">Вашиот Партнер за Сајбер Безбедност и Развој на Софтвер.</p>
             </div>
         </footer>
 
