--- a/mk/services/secure-software-development/index.html
+++ b/mk/services/secure-software-development/index.html
@@ -15,7 +15,7 @@
         <meta name="description" content="Lekov Security изработува софтвер по нарачка со безбедност во неговото јадро. Нашиот процес на развој, кој ја става безбедноста на прво место, создава сигурни, скалабилни и безбедни апликации.">
         <meta name="google-site-verification" content="J3I7DvfYbsikEyJBH8tImi7D3e5R0a6CrtMJTjmJlKA" />
 
-        <title>Безбеден Развој на Софтвер | Lekov Security</title>
+        <title>Развој на Безбеден Софтвер | Lekov Security</title>
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -25,7 +25,7 @@
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://lekovsecurity.mk/mk/services/secure-software-development/">
-        <meta property="og:title" content="Lekov Security - Безбеден Развој на Софтвер">
+        <meta property="og:title" content="Lekov Security - Развој на Безбеден Софтвер">
         <meta property="og:description" content="Ние изработуваме софтвер по нарачка прилагоден на вашите деловни процеси, со безбедност интегрирана од самиот почеток.">
         <meta property="og:image" content="https://lekovsecurity.mk/assets/images/og-image.png">
         <meta property="og:site_name" content="Lekov Security">
@@ -99,7 +99,7 @@
             {
                 "@context": "https://schema.org",
                 "@type": "WebPage",
-                "name": "Безбеден Развој на Софтвер | Lekov Security",
+                "name": "Развој на Безбеден Софтвер | Lekov Security",
                 "description": "Lekov Security изработува софтвер по нарачка со безбедност во неговото јадро. Нашиот процес на развој, кој ја става безбедноста на прво место, создава сигурни, скалабилни и безбедни апликации.",
                 "url": "https://lekovsecurity.mk/mk/services/secure-software-development/",
                 "inLanguage": "mk-MK",
@@ -121,8 +121,8 @@
                 },
                 "mainEntity": {
                     "@type": "Service",
-                    "name": "Безбеден Развој на Софтвер",
-                    "serviceType": "Безбеден развој на софтвер",
+                    "name": "Развој на Безбеден Софтвер",
+                    "serviceType": "Развој на безбеден софтвер",
                     "description": "Ние изработуваме апликации по нарачка прилагодени на вашите уникатни деловни процеси, интегрирајќи безбедност во секоја фаза од животниот циклус на развојот.",
                     "provider": {
                         "@id": "https://lekovsecurity.mk/#organization"
@@ -248,7 +248,7 @@
             <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-20">
                 <div class="max-w-4xl mx-auto">
                     <h1 class="text-4xl sm:text-5xl lg:text-7xl font-display font-bold text-white mb-4 reveal">
-                        Безбеден Развој на<br><span class="text-cyber-accent text-glow">Софтвер</span>
+                        Развој на<br><span class="text-cyber-accent text-glow">Безбеден Софтвер</span>
                     </h1>
                     <p class="font-mono text-cyber-accent mb-8 reveal" style="transition-delay: 100ms;">// Градење на Робустни Апликации, Безбедни по Дизајн</p>
                     <p class="text-lg sm:text-xl text-cyber-light/80 max-w-3xl mx-auto mb-10 reveal" style="transition-delay: 200ms;">
@@ -396,7 +396,7 @@
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-cyber-light/50">
                 <p class="font-mono text-sm">&copy; 2025 Lekov Security. Сите права се задржани.</p>
                 <p class="font-mono text-sm mt-1">Кратово, Северна Македонија</p>
-                <p class="font-mono text-xs mt-2">Вашиот Партнер за Сајбер Безбедност и Безбеден Развој на Софтвер.</p>
+                <p class="font-mono text-xs mt-2">Вашиот Партнер за Сајбер Безбедност и Развој на Софтвер.</p>
             </div>
         </footer>
 
