--- a/mk/services/web-application-penetration-testing/index.html
+++ b/mk/services/web-application-penetration-testing/index.html
@@ -391,7 +391,7 @@
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-cyber-light/50">
                 <p class="font-mono text-sm">&copy; 2025 Lekov Security. Сите права се задржани.</p>
                 <p class="font-mono text-sm mt-1">Кратово, Северна Македонија</p>
-                <p class="font-mono text-xs mt-2">Вашиот Партнер за Сајбер Безбедност и Безбеден Развој на Софтвер.</p>
+                <p class="font-mono text-xs mt-2">Вашиот Партнер за Сајбер Безбедност и Развој на Софтвер.</p>
             </div>
         </footer>
 
