--- a/index.html
+++ b/index.html
@@ -110,16 +110,47 @@
                         "@type": "Organization",
                         "name": "Lekov Security",
                         "url": "https://lekovsecurity.mk/",
-                        "logo": "https://lekovsecurity.mk/assets/images/logo.png",
+                        "logo": {
+                            "@type": "ImageObject",
+                            "url": "https://lekovsecurity.mk/assets/images/logo.png",
+                            "width": 512,
+                            "height": 512
+                        },
+                        "image": "https://lekovsecurity.mk/assets/images/logo.png",
+                        "address": {
+                            "@type": "PostalAddress",
+                            "addressLocality": "Kratovo",
+                            "addressCountry": "MK"
+                        },
+                        "founder": {
+                            "@type": "Person",
+                            "name": "Valentin Lekov"
+                        },
                         "description": "Lekov Security offers expert web application penetration testing and secure software development. We provide simple, powerful solutions to protect your business.",
                         "contactPoint": {
                             "@type": "ContactPoint",
                             "telephone": "+389-74-221-337",
-                            "contactType": "Security Consultation",
-                            "areaServed": "MK",
-                            "availableLanguage": "en"
+                            "email": "valentin@lekov.mk",
+                            "contactType": "Cybersecurity and Software Development",
+                            "areaServed": [
+                                {
+                                    "@type": "Country",
+                                    "name": "North Macedonia",
+                                    "identifier": "MK"
+                                },
+                                {
+                                    "@type": "Place", 
+                                    "name": "Europe",
+                                    "identifier": "EU",
+                                    "description": "European Union member states"
+                                }
+                            ],
+                            "availableLanguage": ["en", "mk"]
                         },
-                        "sameAs": []
+                        "sameAs": [
+                            "https://linkedin.com/company/leksec",
+                            "https://github.com/leksec"
+                        ]
                     },
                     {
                         "@type": "WebSite",
@@ -129,81 +160,28 @@
                         "publisher": {
                             "@type": "Organization",
                             "name": "Lekov Security"
-                        }
+                        },
+                        "inLanguage": "en"
                     },
                     {
                         "@type": "Service",
-                        "serviceType": "Web Application Penetration Testing",
+                        "serviceType": "Cybersecurity",
                         "provider": {
                             "@type": "Organization",
                             "name": "Lekov Security"
                         },
                         "name": "Comprehensive Web Application Security Testing",
-                        "description": "Our experts identify vulnerabilities in your web applications and APIs. We provide clear, actionable reports, ensuring you understand the risks and how to mitigate them.",
-                        "hasOfferCatalog": {
-                            "@type": "OfferCatalog",
-                            "name": "Cybersecurity Services",
-                            "itemListElement": [
-                                {
-                                    "@type": "Offer",
-                                    "itemOffered": {
-                                        "@type": "Service",
-                                        "name": "Find & Explain Real-World Risks"
-                                    }
-                                },
-                                {
-                                    "@type": "Offer",
-                                    "itemOffered": {
-                                        "@type": "Service",
-                                        "name": "Clear, Actionable Reports"
-                                    }
-                                },
-                                {
-                                    "@type": "Offer",
-                                    "itemOffered": {
-                                        "@type": "Service",
-                                        "name": "Manual & Automated Testing"
-                                    }
-                                }
-                            ]
-                        }
+                        "description": "Our experts identify vulnerabilities in your web applications and APIs. We provide clear, actionable reports, ensuring you understand the risks and how to mitigate them."
                     },
                     {
                         "@type": "Service",
-                        "serviceType": "Custom Software Development",
+                        "serviceType": "Software Development",
                         "provider": {
                             "@type": "Organization",
                             "name": "Lekov Security"
                         },
                         "name": "Secure Software Development",
-                        "description": "We build custom software tailored to your business processes. Our development lifecycle integrates security from the ground up, creating reliable and scalable solutions that are secure by design.",
-                        "hasOfferCatalog": {
-                            "@type": "OfferCatalog",
-                            "name": "Software Development Services",
-                            "itemListElement": [
-                                {
-                                    "@type": "Offer",
-                                    "itemOffered": {
-                                        "@type": "Service",
-                                        "name": "Security-First Development Process"
-                                    }
-                                },
-                                {
-                                    "@type": "Offer",
-                                    "itemOffered": {
-                                        "@type": "Service",
-                                        "name": "Efficient and Reliable Code"
-                                    }
-                                },
-                                {
-                                    "@type": "Offer",
-                                    "itemOffered": {
-                                        "@type": "Service",
-                                        "name": "Solutions That Grow With Your Business"
-                                    }
-                                }
-                            ]
-                        }
+                        "description": "We build custom software tailored to your business processes. Our development lifecycle integrates security from the ground up, creating reliable and scalable solutions that are secure by design."
                     }
                 ]
             }
@@ -360,7 +338,7 @@
                             </div>
 
                             <div class="mt-8">
-                                <a href="/services/secure-software-development" class="block w-full text-center py-2 border border-cyber-accent text-cyber-accent font-mono text-sm hover:bg-cyber-accent hover:text-cyber-dark transition-all duration-300">
+                                <a href="/services/secure-custom-software-development" class="block w-full text-center py-2 border border-cyber-accent text-cyber-accent font-mono text-sm hover:bg-cyber-accent hover:text-cyber-dark transition-all duration-300">
                                     [ Learn More ]
                                 </a>
                             </div>
@@ -431,10 +409,26 @@
         </main>
 
         <footer class="border-t border-cyber-accent/20">
-            <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-cyber-light/50">
-                <p class="font-mono text-sm">&copy; 2025 Lekov Security. All Rights Reserved.</p>
-                <p class="font-mono text-sm mt-1">Kratovo, North Macedonia</p>
-                <p class="font-mono text-xs mt-2">Your Partner in Cybersecurity and Secure Software Development.</p>
+            <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+                <div class="flex justify-center space-x-6 mb-6">
+                    <a href="https://linkedin.com/company/leksec" target="_blank" rel="noopener noreferrer" class="text-cyber-light/50 hover:text-cyber-accent transition-colors" aria-label="LinkedIn">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                        </svg>
+                    </a>
+
+                    <a href="https://github.com/leksec" target="_blank" rel="noopener noreferrer" class="text-cyber-light/50 hover:text-cyber-accent transition-colors" aria-label="GitHub">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                        </svg>
+                    </a>
+                </div>
+                
+                <div class="text-center text-cyber-light/50">
+                    <p class="font-mono text-sm">&copy; 2025 Lekov Security. All Rights Reserved.</p>
+                    <p class="font-mono text-sm mt-1">Kratovo, North Macedonia</p>
+                    <p class="font-mono text-xs mt-2">Your Partner in Cybersecurity and Software Development.</p>
+                </div>
             </div>
         </footer>
 
