--- a/services/web-application-penetration-testing/index.html
+++ b/services/web-application-penetration-testing/index.html
@@ -22,6 +22,8 @@
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 
         <link rel="canonical" href="https://lekovsecurity.mk/services/web-application-penetration-testing/">
+        <link rel="alternate" hreflang="en" href="https://lekovsecurity.mk/services/web-application-penetration-testing/">
+        <link rel="alternate" hreflang="mk" href="https://lekovsecurity.mk/mk/services/web-application-penetration-testing/">
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://lekovsecurity.mk/services/web-application-penetration-testing/">
@@ -98,81 +100,114 @@
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
-                "@type": "WebPage",
-                "name": "Web Application Penetration Testing | Lekov Security",
-                "description": "Lekov Security provides expert web application penetration testing to identify and remediate critical vulnerabilities. Protect your assets with our comprehensive, actionable security assessments.",
-                "url": "https://lekovsecurity.mk/services/web-application-penetration-testing/",
-                "publisher": {
-                    "@type": "Organization",
-                    "name": "Lekov Security",
-                    "url": "https://lekovsecurity.mk/",
-                    "logo": "https://lekovsecurity.mk/assets/images/logo.png",
-                    "contactPoint": {
-                        "@type": "ContactPoint",
-                        "telephone": "+389-74-221-337",
-                        "contactType": "customer service"
+                "@graph": [
+                    {
+                        "@type": "WebPage",
+                        "name": "Web Application Penetration Testing | Lekov Security",
+                        "description": "Lekov Security provides expert web application penetration testing to identify and remediate critical vulnerabilities. Protect your assets with our comprehensive, actionable security assessments.",
+                        "url": "https://lekovsecurity.mk/services/web-application-penetration-testing/",
+                        "inLanguage": "en-US",
+                        "isPartOf": {
+                            "@type": "WebSite",
+                            "name": "Lekov Security",
+                            "url": "https://lekovsecurity.mk/"
+                        },
+                        "publisher": {
+                            "@type": "Organization",
+                            "name": "Lekov Security",
+                            "url": "https://lekovsecurity.mk/",
+                            "logo": "https://lekovsecurity.mk/assets/images/logo.png",
+                            "contactPoint": {
+                                "@type": "ContactPoint",
+                                "telephone": "+389-74-221-337",
+                                "email": "valentin@lekov.mk",
+                                "contactType": "Cybersecurity and Software Development",
+                                "areaServed": [
+                                    {
+                                        "@type": "Country",
+                                        "name": "North Macedonia",
+                                        "identifier": "MK"
+                                    },
+                                    {
+                                        "@type": "Place", 
+                                        "name": "Europe",
+                                        "identifier": "EU",
+                                        "description": "European Union member states"
+                                    }
+                                ],
+                                "availableLanguage": ["en", "mk"]
+                            },
+                            "address": {
+                                "@type": "PostalAddress",
+                                "addressLocality": "Kratovo",
+                                "addressCountry": "MK"
+                            }
+                        }
                     },
-                    "address": {
-                        "@type": "PostalAddress",
-                        "addressLocality": "Kratovo",
-                        "addressCountry": "MK"
-                    }
-                },
-                "mainEntity": {
-                    "@type": "Service",
-                    "name": "Web Application Penetration Testing",
-                    "serviceType": "Cybersecurity Service",
-                    "description": "Our web application penetration testing is a proactive security assessment designed to identify and exploit vulnerabilities within your applications. We simulate real-world cyberattacks to uncover weaknesses in your code, configurations, and business logic before malicious actors can.",
-                    "provider": {
-                        "@id": "https://lekovsecurity.mk/#organization"
-                    },
-                    "areaServed": {
-                        "@type": "Country",
-                        "name": "North Macedonia"
-                    },
-                    "hasOfferCatalog": {
-                        "@type": "OfferCatalog",
-                        "name": "Penetration Testing Methodology",
-                        "itemListElement": [
-                            {
-                                "@type": "Offer",
-                                "itemOffered": {
-                                    "@type": "Service",
-                                    "name": "Planning & Scoping"
+                    {
+                        "@type": "Organization",
+                        "@id": "https://lekovsecurity.mk/#organization",
+                        "name": "Lekov Security",
+                        "url": "https://lekovsecurity.mk/",
+                        "logo": {
+                            "@type": "ImageObject",
+                            "url": "https://lekovsecurity.mk/assets/images/logo.png",
+                            "width": 512,
+                            "height": 512
+                        },
+                        "contactPoint": {
+                            "@type": "ContactPoint",
+                            "telephone": "+389-74-221-337",
+                            "email": "valentin@lekov.mk",
+                            "contactType": "Cybersecurity and Software Development",
+                            "areaServed": [
+                                {
+                                    "@type": "Country",
+                                    "name": "North Macedonia",
+                                    "identifier": "MK"
+                                },
+                                {
+                                    "@type": "Place", 
+                                    "name": "Europe",
+                                    "identifier": "EU",
+                                    "description": "European Union member states"
                                 }
+                            ],
+                            "availableLanguage": ["en", "mk"]
+                        },
+                        "address": {
+                            "@type": "PostalAddress",
+                            "addressLocality": "Kratovo",
+                            "addressCountry": "MK"
+                        },
+                        "sameAs": [
+                            "https://linkedin.com/company/leksec",
+                            "https://github.com/leksec"
+                        ]
+                    },   
+                    {
+                        "@type": "Service",
+                        "name": "Web Application Penetration Testing",
+                        "serviceType": "Cybersecurity",
+                        "description": "Our web application penetration testing is a proactive security assessment designed to identify and exploit vulnerabilities within your applications. We simulate real-world cyberattacks to uncover weaknesses in your code, configurations, and business logic before malicious actors can.",
+                        "provider": {
+                            "@id": "https://lekovsecurity.mk/#organization"
+                        },
+                        "areaServed": [
+                            {
+                                "@type": "Country",
+                                "name": "North Macedonia",
+                                "identifier": "MK"
                             },
                             {
-                                "@type": "Offer",
-                                "itemOffered": {
-                                    "@type": "Service",
-                                    "name": "Discovery & Reconnaissance"
-                                }
-                            },
-                            {
-                                "@type": "Offer",
-                                "itemOffered": {
-                                    "@type": "Service",
-                                    "name": "Vulnerability Exploitation"
-                                }
-                            },
-                            {
-                                "@type": "Offer",
-                                "itemOffered": {
-                                    "@type": "Service",
-                                    "name": "Comprehensive Reporting & Remediation Guidance"
-                                }
+                                "@type": "Place", 
+                                "name": "Europe",
+                                "identifier": "EU",
+                                "description": "European Union member states"
                             }
                         ]
-                    },
-                    "category": [
-                        "SQL Injection",
-                        "Cross-Site Scripting (XSS)",
-                        "Broken Authentication",
-                        "Broken Access Control",
-                        "Sensitive Data Exposure",
-                        "Security Misconfigurations"
-                    ]
-                }
+                    }
+                ]
             }
         </script>
     </head>
@@ -389,10 +424,26 @@
         </main>
 
         <footer class="border-t border-cyber-accent/20">
-            <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-cyber-light/50">
-                <p class="font-mono text-sm">&copy; 2025 Lekov Security. All Rights Reserved.</p>
-                <p class="font-mono text-sm mt-1">Kratovo, North Macedonia</p>
-                <p class="font-mono text-xs mt-2">Your Partner in Cybersecurity and Secure Software Development.</p>
+            <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+                <div class="flex justify-center space-x-6 mb-6">
+                    <a href="https://linkedin.com/company/leksec" target="_blank" rel="noopener noreferrer" class="text-cyber-light/50 hover:text-cyber-accent transition-colors" aria-label="LinkedIn">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                        </svg>
+                    </a>
+
+                    <a href="https://github.com/leksec" target="_blank" rel="noopener noreferrer" class="text-cyber-light/50 hover:text-cyber-accent transition-colors" aria-label="GitHub">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                        </svg>
+                    </a>
+                </div>
+                
+                <div class="text-center text-cyber-light/50">
+                    <p class="font-mono text-sm">&copy; 2025 Lekov Security. All Rights Reserved.</p>
+                    <p class="font-mono text-sm mt-1">Kratovo, North Macedonia</p>
+                    <p class="font-mono text-xs mt-2">Your Partner in Cybersecurity and Software Development.</p>
+                </div>
             </div>
         </footer>
 
