Updates JSON-LD schema

--- a/index.html
+++ b/index.html
@@ -127,6 +127,26 @@
                             "name": "Valentin Lekov"
                         },
                         "description": "Lekov Security offers expert web application penetration testing and secure software development. We provide simple, powerful solutions to protect your business.",
+                        "hasOfferCatalog": {
+                            "@type": "OfferCatalog",
+                            "name": "Cybersecurity and Software Development",
+                            "itemListElement": [
+                                {
+                                    "@type": "Offer",
+                                    "itemOffered": {
+                                        "@type": "Service",
+                                        "@id": "https://lekovsecurity.mk/services/web-application-penetration-testing/"
+                                    }
+                                },
+                                {
+                                    "@type": "Offer", 
+                                    "itemOffered": {
+                                        "@type": "Service",
+                                        "@id": "https://lekovsecurity.mk/services/secure-software-development/"
+                                    }
+                                }
+                            ]
+                        },
                         "contactPoint": {
                             "@type": "ContactPoint",
                             "telephone": "+389-74-221-337",
@@ -171,6 +191,7 @@
                             "name": "Lekov Security"
                         },
                         "name": "Comprehensive Web Application Security Testing",
+                        "url": "https://lekovsecurity.mk/services/web-application-penetration-testing/",
                         "description": "Our experts identify vulnerabilities in your web applications and APIs. We provide clear, actionable reports, ensuring you understand the risks and how to mitigate them."
                     },
                     {
@@ -181,6 +202,7 @@
                             "name": "Lekov Security"
                         },
                         "name": "Secure Software Development",
+                        "url": "https://lekovsecurity.mk/services/secure-software-development/",
                         "description": "We build custom software tailored to your business processes. Our development lifecycle integrates security from the ground up, creating reliable and scalable solutions that are secure by design."
                     }
                 ]
