--- a/mk/index.html
+++ b/mk/index.html
@@ -127,6 +127,26 @@
                             "name": "Valentin Lekov"
                         },
                         "description": "Lekov Security нуди експертско пенетрациско тестирање на веб апликации и развој на безбеден софтвер. Обезбедуваме едноставни, моќни решенија за заштита на вашиот бизнис.",
+                        "hasOfferCatalog": {
+                            "@type": "OfferCatalog",
+                            "name": "Cybersecurity and Software Development",
+                            "itemListElement": [
+                                {
+                                    "@type": "Offer",
+                                    "itemOffered": {
+                                        "@type": "Service",
+                                        "@id": "https://lekovsecurity.mk/services/web-application-penetration-testing/"
+                                    }
+                                },
+                                {
+                                    "@type": "Offer", 
+                                    "itemOffered": {
+                                        "@type": "Service",
+                                        "@id": "https://lekovsecurity.mk/services/secure-software-development/"
+                                    }
+                                }
+                            ]
+                        },
                         "contactPoint": {
                             "@type": "ContactPoint",
                             "telephone": "+389-74-221-337",
@@ -171,6 +191,7 @@
                             "name": "Lekov Security"
                         },
                         "name": "Сеопфатно Тестирање на Безбедноста на Веб Апликации",
+                        "url": "https://lekovsecurity.mk/mk/services/web-application-penetration-testing/",
                         "description": "Нашите експерти ги идентификуваат ранливостите во вашите веб апликации и API-ја. Обезбедуваме јасни, практични извештаи, осигурувајќи дека ги разбирате ризиците и како да ги отстраните."
                     },
                     {
@@ -181,6 +202,7 @@
                             "name": "Lekov Security"
                         },
                         "name": "Развој на Безбеден Софтвер",
+                        "url": "https://lekovsecurity.mk/mk/services/secure-software-development/",
                         "description": "Изработуваме софтвер по нарачка прилагоден на вашите деловни процеси. Нашиот развоен циклус интегрира безбедност од самиот почеток, создавајќи сигурни и скалабилни решенија кои се безбедни по дизајн."
                     }
                 ]
