--- a/mk/services/web-application-penetration-testing/index.html
+++ b/mk/services/web-application-penetration-testing/index.html
@@ -114,7 +114,12 @@
                             "@type": "Organization",
                             "name": "Lekov Security",
                             "url": "https://lekovsecurity.mk/",
-                            "logo": "https://lekovsecurity.mk/assets/images/logo.png",
+                            "logo": {
+                                "@type": "ImageObject",
+                                "url": "https://lekovsecurity.mk/assets/images/logo.png",
+                                "width": 512,
+                                "height": 512
+                            },
                             "contactPoint": {
                                 "@type": "ContactPoint",
                                 "telephone": "+389-74-221-337",
