Updates whole site

--- a/thanks.html
+++ b/thanks.html
@@ -6,10 +6,10 @@
         <meta name="robots" content="noindex, follow">
 
         <title>Transmission Successful | Lekov Security</title>
-        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+        <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
@@ -72,7 +72,7 @@
         <main class="min-h-screen flex items-center justify-center p-4">
             <div class="w-full max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-center gap-6 md:gap-12">
                 <div class="w-full md:w-2/5 flex flex-col items-center justify-center text-center reveal">
-                    <img src="assets/images/logo.svg" alt="Lekov Security Logo" class="h-48 sm:h-64 w-auto md:mb-8">
+                    <img src="/assets/images/logo.svg" alt="Lekov Security Logo" class="h-48 sm:h-64 w-auto md:mb-8">
                     <h1 class="hidden md:block text-4xl lg:text-5xl font-display font-bold text-cyber-accent">
                         Lekov Security<span class="text-white">.</span>
                     </h1>
