--- a/services/web-application-penetration-testing/index.html
+++ b/services/web-application-penetration-testing/index.html
@@ -456,7 +456,7 @@
 
                     <div class="mt-12 text-center reveal" style="transition-delay: 400ms;">
                         <p class="text-cyber-light/80 max-w-2xl mx-auto">
-                            Looking for ongoing protection? Check out our <a href="/services/continuous-security-monitoring/" class="text-cyber-accent hover:underline font-medium">Quarterly Continuous Monitoring</a> starting at €4,800/year.
+                            Looking for ongoing protection? Check out our <a href="/services/continuous-security-monitoring/" class="text-cyber-accent hover:underline font-medium">Continuous Security Monitoring</a> starting at €4,800/year.
                         </p>
                     </div>
                 </div>
