Updates recommended and fixes types

--- a/services/continuous-security-monitoring/index.html
+++ b/services/continuous-security-monitoring/index.html
@@ -351,7 +351,9 @@
                     </div>
 
                     <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8">
-                        <div class="bg-cyber-dark border border-cyber-accent/30 p-8 reveal flex flex-col">
+                        <div class="bg-cyber-dark border-2 border-cyber-accent p-8 reveal flex flex-col">
+                            <div class="absolute top-0 right-0 bg-cyber-accent text-cyber-dark px-3 py-1 text-xs font-mono font-bold">RECOMMENDED</div>
+
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Standard Monitoring</h3>
                                 <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€4,800<span class="text-xl text-cyber-light/60">/year</span></div>
@@ -372,14 +374,12 @@
                                 <p class="text-cyber-light/60 text-sm italic">Perfect for SaaS companies with regular deployments</p>
                             </div>
 
-                            <a href="#contact" class="block w-full text-center py-3 border-2 border-cyber-accent text-cyber-accent font-mono text-sm hover:bg-cyber-accent hover:text-cyber-dark transition-all duration-300">
+                            <a href="#contact" class="block w-full text-center py-3 bg-cyber-accent text-cyber-dark font-mono text-sm font-bold hover:bg-transparent hover:text-cyber-accent border-2 border-cyber-accent transition-all duration-300">
                                 Get Started
                             </a>
                         </div>
 
-                        <div class="bg-cyber-dark border-2 border-cyber-accent p-8 reveal flex flex-col relative" style="transition-delay: 100ms;">
-                            <div class="absolute top-0 right-0 bg-cyber-accent text-cyber-dark px-3 py-1 text-xs font-mono font-bold">RECOMMENDED</div>
-
+                        <div class="bg-cyber-dark border border-cyber-accent/30 p-8 reveal flex flex-col relative" style="transition-delay: 100ms;">
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Premium Monitoring</h3>
                                 <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€7,200<span class="text-xl text-cyber-light/60">/year</span></div>
@@ -395,10 +395,10 @@
                             </ul>
 
                             <div class="text-center mb-6">
-                                <p class="text-cyber-light/60 text-sm italic">Ideal for high-growth companies & regulated industries</p>
+                                <p class="text-cyber-light/60 text-sm italic">Ideal for high-growth companies and regulated industries</p>
                             </div>
 
-                            <a href="#contact" class="block w-full text-center py-3 bg-cyber-accent text-cyber-dark font-mono text-sm font-bold hover:bg-transparent hover:text-cyber-accent border-2 border-cyber-accent transition-all duration-300">
+                            <a href="#contact" class="block w-full text-center py-3 border-2 border-cyber-accent text-cyber-accent font-mono text-sm hover:bg-cyber-accent hover:text-cyber-dark transition-all duration-300">
                                 Get Started
                             </a>
                         </div>
