--- a/services/web-application-penetration-testing/index.html
+++ b/services/web-application-penetration-testing/index.html
@@ -345,8 +345,8 @@
                     <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-x-12 gap-y-6 font-mono text-sm">
                         <div class="reveal"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Injection Flaws</p></div>
                         <div class="reveal" style="transition-delay: 50ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> File Upload Vulnerabilities</p></div>
-                        <div class="reveal" style="transition-delay: 100ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Broken Authentication & Session Management</p></div>
-                        <div class="reveal" style="transition-delay: 150ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Broken Access Control & User Enumeration</p></div>
+                        <div class="reveal" style="transition-delay: 100ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Broken Authentication and Session Management</p></div>
+                        <div class="reveal" style="transition-delay: 150ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Broken Access Control and User Enumeration</p></div>
                         <div class="reveal" style="transition-delay: 200ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Sensitive Data Exposure</p></div>
                         <div class="reveal" style="transition-delay: 250ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Security Misconfigurations</p></div>
                         <div class="reveal" style="transition-delay: 300ms;"><p class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span> Insecure Business Logic Flaws</p></div>
@@ -386,7 +386,7 @@
                             </ul>
 
                             <div class="text-center mb-6">
-                                <p class="text-cyber-light/60 text-sm italic">Perfect for compliance & external security validation</p>
+                                <p class="text-cyber-light/60 text-sm italic">Perfect for compliance and external security validation</p>
                             </div>
 
                             <a href="#contact" class="block w-full text-center py-3 border-2 border-cyber-accent text-cyber-accent font-mono text-sm hover:bg-cyber-accent hover:text-cyber-dark transition-all duration-300">
@@ -395,7 +395,7 @@
                         </div>
 
                         <div class="bg-cyber-dark border-2 border-cyber-accent p-8 reveal flex flex-col relative" style="transition-delay: 100ms;">
-                            <div class="absolute top-0 right-0 bg-cyber-accent text-cyber-dark px-3 py-1 text-xs font-mono font-bold">MOST POPULAR</div>
+                            <div class="absolute top-0 right-0 bg-cyber-accent text-cyber-dark px-3 py-1 text-xs font-mono font-bold">RECOMMENDED</div>
                             
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Grey-Box Pentest</h3>
