Updates titles and names

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex, follow">
 
-        <title>404 Not Found | Lekov Security</title>
+        <title>Lekov Security | 404 Not Found</title>
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
