--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="description" content="Lekov Security specializes in web application penetration testing and continuous security monitoring. Expert manual testing combined with automated platforms for ongoing vulnerability management.">
         <meta name="google-site-verification" content="J3I7DvfYbsikEyJBH8tImi7D3e5R0a6CrtMJTjmJlKA" />
 
-        <title>Expert Cybesecurity Services | Lekov Security</title>
+        <title>Lekov Security | Expert Cybesecurity Services</title>
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
