--- a/services/continuous-security-monitoring/index.html
+++ b/services/continuous-security-monitoring/index.html
@@ -15,7 +15,7 @@
         <meta name="description" content="Continuous security monitoring with quarterly vulnerability assessments. Track remediation progress and maintain visibility into your security posture with our automated platform.">
         <meta name="google-site-verification" content="J3I7DvfYbsikEyJBH8tImi7D3e5R0a6CrtMJTjmJlKA" />
 
-        <title>Continuous Security Monitoring | Lekov Security</title>
+        <title>Lekov Security | Continuous Security Monitoring</title>
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -102,7 +102,7 @@
                 "@graph": [
                     {
                         "@type": "WebPage",
-                        "name": "Continuous Security Monitoring | Lekov Security",
+                        "name": "Lekov Security | Continuous Security Monitoring",
                         "description": "Continuous security monitoring with quarterly vulnerability assessments. Track remediation progress and maintain visibility into your security posture with our automated platform.",
                         "url": "https://lekovsecurity.mk/services/continuous-security-monitoring/",
                         "inLanguage": "en-US",
