--- a/services/web-application-penetration-testing/index.html
+++ b/services/web-application-penetration-testing/index.html
@@ -15,7 +15,7 @@
         <meta name="description" content="Lekov Security provides expert web application penetration testing to identify and remediate critical vulnerabilities. Protect your assets with our comprehensive, actionable security assessments.">
         <meta name="google-site-verification" content="J3I7DvfYbsikEyJBH8tImi7D3e5R0a6CrtMJTjmJlKA" />
 
-        <title>Web Application Penetration Testing | Lekov Security</title>
+        <title>Lekov Security | Web Application Penetration Testing</title>
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -102,7 +102,7 @@
                 "@graph": [
                     {
                         "@type": "WebPage",
-                        "name": "Web Application Penetration Testing | Lekov Security",
+                        "name": "Lekov Security | Web Application Penetration Testing",
                         "description": "Lekov Security provides expert web application penetration testing to identify and remediate critical vulnerabilities. Protect your assets with our comprehensive, actionable security assessments.",
                         "url": "https://lekovsecurity.mk/services/web-application-penetration-testing/",
                         "inLanguage": "en-US",
