Updates offers and pricings

--- a/services/continuous-security-monitoring/index.html
+++ b/services/continuous-security-monitoring/index.html
@@ -65,7 +65,7 @@
                     left: 0;
                     width: 100vw;
                     height: 100vh;
-                    background-image: 
+                    background-image:
                         linear-gradient(to right, rgba(57, 255, 20, 0.05) 1px, transparent 1px),
                         linear-gradient(to bottom, rgba(57, 255, 20, 0.05) 1px, transparent 1px);
                     background-size: 40px 40px;
@@ -133,7 +133,7 @@
                                         "identifier": "MK"
                                     },
                                     {
-                                        "@type": "Place", 
+                                        "@type": "Place",
                                         "name": "Europe",
                                         "identifier": "EU",
                                         "description": "European Union member states"
@@ -171,7 +171,7 @@
                                     "identifier": "MK"
                                 },
                                 {
-                                    "@type": "Place", 
+                                    "@type": "Place",
                                     "name": "Europe",
                                     "identifier": "EU",
                                     "description": "European Union member states"
@@ -188,7 +188,7 @@
                             "https://linkedin.com/company/leksec",
                             "https://github.com/leksec"
                         ]
-                    },   
+                    },
                     {
                         "@type": "Service",
                         "name": "Continuous Security Monitoring",
@@ -204,7 +204,7 @@
                                 "identifier": "MK"
                             },
                             {
-                                "@type": "Place", 
+                                "@type": "Place",
                                 "name": "Europe",
                                 "identifier": "EU",
                                 "description": "European Union member states"
@@ -356,13 +356,13 @@
 
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Standard Monitoring</h3>
-                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€4,800<span class="text-xl text-cyber-light/60">/year</span></div>
-                                <p class="text-cyber-light/60 text-sm">€1,200 quarterly - Comprehensive protection</p>
+                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€2,000<span class="text-xl text-cyber-light/60">/year</span></div>
+                                <p class="text-cyber-light/60 text-sm">€500 quarterly - Comprehensive protection</p>
                             </div>
 
                             <ul class="space-y-3 mb-8 flex-grow">
+                                <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">1 target domain/application</span></li>
                                 <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Comprehensive scan every 3 months</span></li>
-                                <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Up to 5 target domains/applications</span></li>
                                 <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Manual validation of all findings</span></li>
                                 <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Quarterly HTML/PDF security reports</span></li>
                                 <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Immediate alerts for critical vulnerabilities</span></li>
@@ -382,14 +382,14 @@
                         <div class="bg-cyber-dark border border-cyber-accent/30 p-8 reveal flex flex-col relative" style="transition-delay: 100ms;">
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Premium Monitoring</h3>
-                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€7,200<span class="text-xl text-cyber-light/60">/year</span></div>
-                                <p class="text-cyber-light/60 text-sm">€1,800 quarterly - Maximum coverage</p>
+                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€4,000<span class="text-xl text-cyber-light/60">/year</span></div>
+                                <p class="text-cyber-light/60 text-sm">€1,000 quarterly - Maximum coverage</p>
                             </div>
 
                             <ul class="space-y-3 mb-8 flex-grow">
                                 <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Everything in <strong>Standard Monitoring</strong></span></li>
-                                <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Up to 10 target domains/applications</span></li>
-                                <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">5 hours/quarter of remediation consulting included</span></li>
+                                <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Up to 3 target domains/applications</span></li>
+                                <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">2 hours/quarter of remediation consulting included</span></li>
                                 <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">Priority support (24-hour response)</span></li>
                                 <li class="flex items-center"><span class="text-cyber-accent mr-3">&gt;</span><span class="text-cyber-light/80">15% discount on annual penetration testing</span></li>
                             </ul>
@@ -414,7 +414,7 @@
                             <div class="text-cyber-accent text-2xl">⚠</div>
                             <h3 class="font-mono text-lg font-bold text-white">Important Note</h3>
                         </div>
-                        
+
                         <p class="text-cyber-light/80 leading-relaxed mb-3">
                             <strong>Continuous security monitoring does not replace manual penetration testing.</strong> While our quarterly monitoring provides ongoing vulnerability detection and tracking, it cannot replicate the depth and expertise of comprehensive human-led penetration testing.
                         </p>
@@ -488,7 +488,7 @@
                         </svg>
                     </a>
                 </div>
-                
+
                 <div class="text-center text-cyber-light/50">
                     <p class="font-mono text-sm">&copy; 2025 Lekov Security. All Rights Reserved.</p>
                     <p class="font-mono text-xs mt-2">Expert Cybersecurity Services.</p>
