Updates form submission URL

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     </div>
 
                     <div class="max-w-2xl mx-auto reveal">
-                        <form action="https://submit-form.com/LFz4XaH40" method="POST" class="space-y-6">
+                        <form action="https://submit-form.com/oD9XmDJUX" method="POST" class="space-y-6">
                             <input type="hidden" name="_redirect" value="https://lekovsecurity.mk/thanks.html">
 
                             <div class="flex flex-col md:flex-row gap-6">
