--- a/services/web-application-penetration-testing/index.html
+++ b/services/web-application-penetration-testing/index.html
@@ -477,7 +477,7 @@
                     </div>
 
                     <div class="max-w-2xl mx-auto reveal">
-                        <form action="https://submit-form.com/LFz4XaH40" method="POST" class="space-y-6">
+                        <form action="https://submit-form.com/oD9XmDJUX" method="POST" class="space-y-6">
                             <input type="hidden" name="_redirect" value="https://lekovsecurity.mk/thanks.html">
                             <input type="hidden" name="_email.subject" value="Penetration Testing">
 
